[gd_scene load_steps=12 format=3 uid="uid://duui0qg20kcrv"]

[ext_resource type="Script" path="res://ui/InGame/InGame.gd" id="1_y0rgb"]
[ext_resource type="PackedScene" uid="uid://c0o2d1rqeugpm" path="res://scene/player/player.tscn" id="2_34uwu"]
[ext_resource type="Texture2D" uid="uid://dm8q4g5x7wckc" path="res://asset/pic/texture/light.png" id="3_802rx"]
[ext_resource type="Script" path="res://gamemanager/SpawnManager/spawnmanager.gd" id="4_2ujjm"]
[ext_resource type="Script" path="res://ui/InGame/drops.gd" id="5_7ehn4"]
[ext_resource type="PackedScene" uid="uid://b52quesshidbh" path="res://scene/tilemap/level1.tscn" id="9_7xnml"]

[sub_resource type="Curve2D" id="Curve2D_wc05l"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 240, 142, 0, 0, 0, 0, -237, 139.5, 0, 0, 0, 0, -238, -133.5, 0, 0, 0, 0, 239, -135, 0, 0, 0, 0, 240, 142.5)
}
point_count = 5

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_281ib"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_vpjx8"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_dbslg"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6actc"]
normal = Vector2(-1, 0)

[node name="InGame" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 2.0
offset_right = 470.0
offset_bottom = 309.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y0rgb")

[node name="player" parent="." groups=["player"] instance=ExtResource("2_34uwu")]
unique_name_in_owner = true
process_mode = 1
safe_margin = 1.0

[node name="monster_spawn_line" type="Path2D" parent="player"]
scale = Vector2(2, 2)
curve = SubResource("Curve2D_wc05l")

[node name="PathFollow2D" type="PathFollow2D" parent="player/monster_spawn_line"]
position = Vector2(240, 142)
rotation = -3.13635

[node name="PointLight2D" type="PointLight2D" parent="player"]
scale = Vector2(2.8, 2.8)
energy = 0.6
texture = ExtResource("3_802rx")

[node name="SpawnManager" type="Node2D" parent="." groups=["SpawnManager"]]
process_mode = 1
script = ExtResource("4_2ujjm")

[node name="drops" type="Node2D" parent="SpawnManager"]
script = ExtResource("5_7ehn4")

[node name="air_wall" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="left" type="CollisionShape2D" parent="air_wall"]
position = Vector2(-2753, 2)
shape = SubResource("WorldBoundaryShape2D_281ib")

[node name="top" type="CollisionShape2D" parent="air_wall"]
position = Vector2(1, -1491)
shape = SubResource("WorldBoundaryShape2D_vpjx8")

[node name="down" type="CollisionShape2D" parent="air_wall"]
position = Vector2(-3, 1475)
shape = SubResource("WorldBoundaryShape2D_dbslg")

[node name="right" type="CollisionShape2D" parent="air_wall"]
position = Vector2(2763, -2)
shape = SubResource("WorldBoundaryShape2D_6actc")

[node name="end_game" type="Timer" parent="."]
process_mode = 1
wait_time = 360.0
autostart = true

[node name="WorldEnvironment" type="CanvasModulate" parent="."]
color = Color(0.709804, 0.807843, 0.835294, 1)

[node name="Node2D" parent="." instance=ExtResource("9_7xnml")]
z_index = -500
z_as_relative = false
position = Vector2(0, -1000)
scale = Vector2(0.5, 0.5)

[connection signal="timeout" from="end_game" to="." method="_on_end_game_timeout"]
